Build zipped Windows and macOS clients to hand out
tools/client/make_zips.py cross-builds both from one Mac: the patched RuneLite in lib/,
the launcher as Onyx.jar (manifest Class-Path + Add-Opens), a pinned Temurin 21 JRE,
Onyx.bat / Onyx.command and a friend-facing README.